--- a/src/TestWebApplication/js/themes/ci.default/ci.default.css
+++ b/src/TestWebApplication/js/themes/ci.default/ci.default.css
@@ -128,112 +128,83 @@ a
     font-size: 1em;
 }
 
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button
-{
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
     font-family: Arial,sans-serif;
     font-size: 1em;
 }
-.ui-widget-content
-{
-    border: 1px solid #a8a8a8;
-    background: #ffffff;
+.ui-widget-content {
+    border: 1px solid #D5D5D5;
+    background: #fdfdfd;
     color: #4f4f4f;
 }
-.ui-widget-content a
-{
+
+.ui-widget-content a {
     color: #4f4f4f;
 }
-.ui-widget-header
-{
-    border: 1px solid #a8a8a8;
-    background: #c4c4c4 url(images/ui-bg_highlight-soft_100_c4c4c4_1x100.png) 50% 50% repeat-x;
-    background: #c4c4c4 linear-gradient(top, rgba(255,255,255,0.8), rgba(255,255,255,0));
-    background: #c4c4c4 -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,0.8)), to(rgba(255,255,255,0)));
-    background: #c4c4c4 -moz-linear-gradient(top, rgba(255,255,255,0.8), rgba(255,255,255,0)); /*    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#DDFFFFFF, endColorstr=#00FFFFFF);     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#DDFFFFFF, endColorstr=#00FFFFFF)"; */
+
+.ui-widget-header {
+    background: #c7c8c7 url(images/ui-ciapi-bg_highlight.png) 50% 50% repeat-x;
     color: #333;
     font-weight: bold;
     text-shadow: 0px 1px 0px rgba(255,255,255,0.7);
 }
-.ui-widget-header a
-{
+
+.ui-widget-header a {
     color: #4f4f4f;
 }
 
 /* Interaction states
 ----------------------------------*/
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default
-{
-    border: 1px solid #a8a8a8;
-    background: #c4c4c4 url(images/ui-bg_highlight-hard_80_c4c4c4_1x100.png) 50% 50% repeat-x;
-    background: #c4c4c4 linear-gradient(top, rgba(255,255,255,0.8), rgba(255,255,255,0));
-    background: #c4c4c4 -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,0.8)), to(rgba(255,255,255,0)));
-    background: #c4c4c4 -moz-linear-gradient(top, rgba(255,255,255,0.8), rgba(255,255,255,0)); /*    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#DDFFFFFF, endColorstr=#00FFFFFF);     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#DDFFFFFF, endColorstr=#00FFFFFF)"; */
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+    border: 1px solid #1a1a1a;
+    background: #171717 url(images/ui-ciapi-bg_highlight.png) 50% 50% repeat-x;
+
     font-weight: bold;
-    color: #4f4f4f;
+    color: #fff;
+    text-shadow: 0px 1px 0px rgba(0,0,0,0.7);
+}
+
+.ui-state-default.ui-ciapi-button-yellow {
+    background: #ffd500 url(images/ui-ciapi-bg_highlight_yellow.png) 50% 50% repeat-x;
+    color: #000;
     text-shadow: 0px 1px 0px rgba(255,255,255,0.7);
 }
-.ui-state-default
-{
-    -moz-box-shadow: inset 0px 1px 0px #fff;
-    -webkit-box-shadow: inset 0px 1px 0px #fff;
-    box-shadow: inset 0px 1px 0px #fff;
-}
-.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited
-{
+
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited {
     color: #4f4f4f;
     text-decoration: none;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus
-{
-    border: 1px solid #7096ab;
-    background: #85b2cb url(images/ui-bg_highlight-hard_80_85b2cb_1x100.png) 50% 50% repeat-x;
-    background: #85b2cb linear-gradient(top, rgba(255,255,255,0.6), rgba(255,255,255,0));
-    background: #85b2cb -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,0.6)), to(rgba(255,255,255,0)));
-    background: #85b2cb -moz-linear-gradient(top, rgba(255,255,255,0.6), rgba(255,255,255,0)); /*    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#00FFFFFF);     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#00FFFFFF)"; */
-    font-weight: bold;
-    color: #313131;
-    -moz-box-shadow: 0 0 5px #85b2cb;
-    -webkit-box-shadow: 0px 0px 8px #85b2cb;
-    box-shadow: 0px 0px 8px #85b2cb;
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+    border: 1px solid #1a1a1a;
+    background: #171717 url(images/ui-ciapi-bg_highlight_hover.png) 50% 50% repeat-x;
 }
-.ui-state-hover
-{
-    -moz-box-shadow: 0px 0px 8px #85b2cb, inset 0px 1px 0px #fff;
-    -webkit-box-shadow: 0px 0px 8px #85b2cb, inset 0px 1px 0px #fff;
-    box-shadow: 0px 0px 8px #85b2cb, inset 0px 1px 0px #fff;
+
+.ui-state-hover.ui-ciapi-button-yellow {
+    background: #ffd500 url(images/ui-ciapi-bg_highlight_hover_yellow.png) 50% 50% repeat-x;
 }
-.ui-state-hover a, .ui-state-hover a:hover
-{
-    color: #2f556a;
+
+.ui-state-hover a, .ui-state-hover a:hover {
+    color: #fff;
     text-decoration: none;
 }
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active
-{
-    border: 1px solid #7096ab;
-    background: #85b2cb url(images/ui-bg_inset-hard_65_85b2cb_1x100.png) 50% 50% repeat-x;
-    background: #85b2cb linear-gradient(top, rgba(255,255,255,0), rgba(255,255,255,0.4));
-    background: #85b2cb -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,0)), to(rgba(255,255,255,0.4)));
-    background: #85b2cb -moz-linear-gradient(top, rgba(255,255,255,0), rgba(255,255,255,0.4)); /*    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF, endColorstr=#CCFFFFFF);     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF, endColorstr=#CCFFFFFF)"; */
-    font-weight: bold;
-    color: #1C4257;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+    border: 1px solid #1a1a1a;
+    background: #171717 url(images/ui-ciapi-bg_highlight_active.png) 50% 50% repeat-x;
 }
-.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited
-{
-    color: #2f556a;
+
+.ui-state-active.ui-ciapi-button-yellow {
+    background: #ffd500 url(images/ui-ciapi-bg_highlight_active_yellow.png) 50% 50% repeat-x;
+}
+
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
+    color: #fff;
     text-decoration: none;
 }
-.ui-widget :active
-{
+.ui-widget :active {
     outline: none;
 }
-.ui-state-active
-{
-    -moz-box-shadow: inset 0px -1px 0px #fff;
-    -webkit-box-shadow: inset 0px 1px 0px #fff;
-    box-shadow: inset 0px 1px 0px #fff;
-}
+
 /* Interaction Cues
 ----------------------------------*/
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight
@@ -259,6 +230,8 @@ a
     background: #fef1ec -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,0.8)), to(rgba(255,255,255,0)));
     background: #fef1ec -moz-linear-gradient(top, rgba(255,255,255,0.8), rgba(255,255,255,0)); /*    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#DDFFFFFF, endColorstr=#00FFFFFF);     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#DDFFFFFF, endColorstr=#00FFFFFF)";*/
     color: #cd0a0a;
+    padding: 10px;
+    margin: 0 0 10px 0;
 }
 .ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a
 {
@@ -293,35 +266,44 @@ a
 {
     width: 16px;
     height: 16px;
-    background-image: url(images/ui-icons_616161_256x240.png);
+    background-image: url(images/ui-icons_ffffff_256x240.png);
 }
 .ui-widget-content .ui-icon
 {
-    background-image: url(images/ui-icons_616161_256x240.png);
+    background-image: url(images/ui-icons_ffffff_256x240.png);
 }
 .ui-widget-header .ui-icon
 {
-    background-image: url(images/ui-icons_898989_256x240.png);
+    background-image: url(images/ui-icons_ffffff_256x240.png);
 }
-.ui-state-default .ui-icon
-{
-    background-image: url(images/ui-icons_38667f_256x240.png);
+.ui-state-default .ui-icon {
+    background-image: url(images/ui-icons_ffffff_256x240.png);
 }
+
+.ui-state-default.ui-ciapi-button-yellow .ui-icon {
+    background-image: url(images/ui-icons_222222_256x240.png);
+}
+
 .ui-state-hover .ui-icon, .ui-state-focus .ui-icon
 {
-    background-image: url(images/ui-icons_38667f_256x240.png);
+    background-image: url(images/ui-icons_ffffff_256x240.png);
 }
 .ui-state-active .ui-icon
 {
-    background-image: url(images/ui-icons_38667f_256x240.png);
+    background-image: url(images/ui-icons_ffffff_256x240.png);
 }
 .ui-state-highlight .ui-icon
 {
-    background-image: url(images/ui-icons_2e83ff_256x240.png);
+    background-image: url(images/ui-icons_ffffff_256x240.png);
 }
 .ui-state-error .ui-icon, .ui-state-error-text .ui-icon
 {
     background-image: url(images/ui-icons_cd0a0a_256x240.png);
+}
+
+
+.ui-button-text-icon-primary .ui-button-icon-primary, .ui-button-text-icons .ui-button-icon-primary, .ui-button-icons-only .ui-button-icon-primary {
+    left: 0.5em;
 }
 
 /* positioning */
@@ -1090,9 +1072,9 @@ a
 }
 .ui-corner-all
 {
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
 }
 .ui-round-all
 {
@@ -2188,58 +2170,53 @@ button.ui-button::-moz-focus-inner
  * {url to docs on on the dev portal for Authentication widget}
  */
 .ui-ciapi-authentication {
-    -moz-box-shadow: 0px 5px 10px rgba(0,0,0,0.8);
-    -webkit-box-shadow: 0px 5px 10px rgba(0,0,0,0.8);
-    
-    box-shadow: 0px 5px 10px rgba(0,0,0,0.8);
     overflow: hidden;
     padding: 0;
 }
 
 .ui-ciapi-authentication .ui-ciapi-authentication-titlebar {
-    padding: .5em 1em .3em;
+    border-bottom: 1px solid #a1a1a1;
+    border-top: 1px solid #fff;
+    padding: .5em 1em;
     position: relative;
 }
 
 .ui-ciapi-authentication .ui-ciapi-authentication-title {
     float: left;
-    margin: .1em 16px .2em 0;
-}
-
-.ui-ciapi-authentication .ui-ciapi-authentication-titlebar-close {
-    position: absolute;
-    right: .3em;
-    top: 50%;
-    width: 19px;
-    margin: -10px 0 0 0;
-    padding: 1px;
-    height: 18px;
-    -moz-border-radius: 10px;
-}
-
-.ui-ciapi-authentication .ui-ciapi-authentication-titlebar-close span {
-    display: block;
-    margin: 1px;
-}
-
-.ui-ciapi-authentication .ui-ciapi-authentication-titlebar-close:hover,
-.ui-ciapi-authentication .ui-ciapi-authentication-titlebar-close:focus {
-    padding: 0;
 }
 
 .ui-ciapi-authentication .ui-ciapi-authentication-content {
-    position: relative;
     border: 0;
-    padding: .5em 1em;
     overflow: auto;
+    padding: 1em 1.2em 0;
+    position: relative;
     zoom: 1;
 }
 
+.ui-ciapi-authentication .ui-ciapi-authentication-content fieldset {
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
+.ui-ciapi-authentication .ui-ciapi-authentication-input {
+    background: #fff;
+    margin: 0.2em 0 1.2em;
+    padding: 0.3em 0.5em;
+}
+
+.ui-ciapi-authentication .ui-ciapi-authentication-input input {
+    border: none;
+    padding: 0;
+    width: 100%;
+}
+
+
 .ui-ciapi-authentication .ui-ciapi-authentication-buttonpane {
     text-align: left;
-    border-width: 1px 0 0 0;
+    border-width: 0;
     background-image: none;
-    padding: .3em 1em .5em .4em;
+    padding: 0 1.2em 0.5em;
 }
 
 .ui-ciapi-authentication .ui-ciapi-authentication-buttonpane .ui-ciapi-authentication-buttonset {
@@ -2247,7 +2224,8 @@ button.ui-button::-moz-focus-inner
 }
 
 .ui-ciapi-authentication .ui-ciapi-authentication-buttonpane button {
-    margin: .5em .4em .5em 0;
+    float: right;
+    margin: 0.5em 0;
     cursor: pointer;
 }
 
@@ -2262,11 +2240,3 @@ button.ui-button::-moz-focus-inner
     cursor: move;
 }
 
-.ui-ciapi-authentication .ui-ciapi-authentication-titlebar {
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    -moz-border-radius: 0;
-    -webkit-border-radius: 0;
-    border-radius: 0;
-}
