Auto launch ITP after logon

--- a/src/TestWebApplication/ResponsiveLayout.Master
+++ b/src/TestWebApplication/ResponsiveLayout.Master
@@ -57,7 +57,9 @@
 
     <nav class=nav-feature>
         <cc1:AuthenticationStatus ID="AuthenticationStatus1" runat="server" Width="200px"
-            AfterLogOffNavigateUrl="~/Default.aspx" />
+            AfterLogOffNavigateUrl="~/Default.aspx"
+            LaunchPlatformUri=""
+             />
     </nav>
 
     <div class=logo>
